[project]
name = "use_sphinx_with_pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "jennier0107", email = "mt3085570450@outlook.com" },
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
doc = [
    "sphinx>=7.2.6",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
docs = { shell = "cd docs && make html" }